--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -21,10 +21,10 @@
   --btnBgColor: #ffffff;
   --btnBgColorSecondary: #d41443;
   --btnBgColorHover: #ecebeb;
+  --btnBgColorHoverSecondary: #ae0f37;
 
   //Icons Colors
   --iconColor: #fea5bb;
   --iconColorSecondary: #d41443;
   --iconColorTertiary: #ffffff;
 }
-
