--- a/src/partials/01-header.html
+++ b/src/partials/01-header.html
@@ -13,7 +13,7 @@
         </li>
 
         <li class="header__item">
-          <a href="#about" class="header__link">About us</a>
+          <a href="#reviews" class="header__link">About us</a>
         </li>
 
         <li class="header__item">
@@ -63,11 +63,11 @@
 
     <ul class="mob-menu__list">
       <li class="mob-menu__item">
-        <a href="" class="mob-menu__link mob-menu__link--current">Home</a>
+        <a href="#hero" class="mob-menu__link mob-menu__link--current">Home</a>
       </li>
 
       <li class="mob-menu__item">
-        <a href="#about" class="mob-menu__link">About us</a>
+        <a href="#reviews" class="mob-menu__link">About us</a>
       </li>
 
       <li class="mob-menu__item">
