--- a/src/sass/components/_09-footer.scss
+++ b/src/sass/components/_09-footer.scss
@@ -117,6 +117,10 @@
   position: relative;
   overflow: hidden;
   background-color: var(--iconColor);
+
+  transition-property: background-color;
+  @include transition;
+
   &:hover,
   &:focus {
     background-color: var(--btnBgColorSecondary);
