--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -46,7 +46,7 @@
         src="./images/01-header/icecream-desk-min.png"
         alt="icecream"
         loading="lazy"
-        data-aos="zoom-in"
+        data-aos="fade-up"
       />
     </picture>
 
