--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -72,6 +72,7 @@
         alt="girl wiwth icecream"
         loading="lazy"
         data-aos="zoom-in-left"
+        data-aos-delay="300"
       />
     </picture>
 
@@ -114,6 +115,7 @@
           alt="Eco Milk"
           loading="lazy"
           data-aos="zoom-in-right"
+          data-aos-delay="100"
         />
       </picture>
 
