--- a/src/partials/01-header.html
+++ b/src/partials/01-header.html
@@ -9,23 +9,44 @@
     <nav class="header__nav">
       <ul class="header__list">
         <li class="header__item">
-          <a href="#hero" class="header__link header__link--current">Home</a>
+          <button
+            class="header__link header__link--current btn"
+            data-scroll-home>
+            Home
+        </button>
         </li>
 
         <li class="header__item">
-          <a href="#reviews" class="header__link">About us</a>
+          <button 
+            class="header__link btn"
+            type="button"
+            data-scroll-reviews-menu>
+            About us
+        </button>
         </li>
 
         <li class="header__item">
-          <a href="#about" class="header__link">How it’s made?</a>
+          <button
+           class="header__link btn"
+           data-scroll-about-menu>
+           How it’s made?
+          </button>
         </li>
 
         <li class="header__item">
-          <a href="#products" class="header__link">Our products</a>
+          <button
+          class="header__link btn"
+          data-scroll-products>
+          Our products
+        </button>
         </li>
 
         <li class="header__item">
-          <a href="#contacts" class="header__link">Contact</a>
+          <button 
+            class="header__link btn"
+            data-scroll-contacts>
+            Contact
+        </button>
         </li>
       </ul>
     </nav>
@@ -63,23 +84,48 @@
 
     <ul class="mob-menu__list">
       <li class="mob-menu__item">
-        <a href="#hero" class="mob-menu__link mob-menu__link--current">Home</a>
+        <button
+          class="mob-menu__link mob-menu__link--current btn"
+          type="button"
+          data-scroll-home-menu>
+        Home
+      </button>
       </li>
 
       <li class="mob-menu__item">
-        <a href="#reviews" class="mob-menu__link">About us</a>
+        <button
+          class="mob-menu__link btn"
+          type="button"
+          data-scroll-reviews-menu>
+          About us
+        </button>
       </li>
 
       <li class="mob-menu__item">
-        <a href="#about" class="mob-menu__link">How it’s made?</a>
+        <button
+          class="mob-menu__link btn"
+          type="button"
+          data-scroll-about-menu>
+          How it’s made?
+          </button>
       </li>
 
       <li class="mob-menu__item">
-        <a href="#products" class="mob-menu__link">Our products</a>
+        <button
+          class="mob-menu__link btn"
+          type="button"
+          data-scroll-products-menu>
+          Our products
+        </button>
       </li>
 
       <li class="mob-menu__item">
-        <a href="#contacts" class="mob-menu__link">Contact</a>
+        <button
+        class="mob-menu__link btn"
+        type="button"
+        data-scroll-contacts-menu>
+        Contact
+      </button>
       </li>
     </ul>
   </div>
