--- a/src/sass/components/_09-footer.scss
+++ b/src/sass/components/_09-footer.scss
@@ -216,3 +216,32 @@
     letter-spacing: 0.02em;
   }
 }
+
+// scroll-up //
+
+.scroll-up{
+  position: fixed;
+  bottom:50px;
+  right:50px;
+  border: 0;
+  background-color: transparent;
+
+}
+
+.scroll-up__icon {
+  fill: #ffffff;
+  background-color: var(--iconColor);
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+
+  transition: background-color 250ms ease-in-out,
+  fill 250ms ease-in-out;
+
+  cursor: pointer;
+  &:hover,
+  &:focus {
+    background-color: var(--colorSecondary);
+    fill: var(--btnBgColorHover);
+  }
+}
