--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -82,8 +82,8 @@
     <ul class="hero__list">
       <li class="hero__item">
         <button 
-          class="hero__link"
-          type="button"
+          class="hero__link btn"
+          type="button"g
           data-scroll-products-hero>
           Products
         </button>
@@ -91,7 +91,7 @@
 
       <li class="hero_item">
         <button
-          class="hero__link hero--link--secondary"
+          class="hero__link hero--link--secondary btn"
           type="button"
           data-scroll-about-hero>
           How its made?
