--- a/src/partials/09-footer.html
+++ b/src/partials/09-footer.html
@@ -54,9 +54,9 @@
     </p>
   </div>
 
-  <button class="scroll-up" type="button" data-scroll-home-body>
-  <svg class="scroll-up__icon" width="25" height="25">
-    <use href="images/01-header/icons.svg#scroll-up"></use>
-  </svg>
+  <button class="scroll-up" type="button" data-scroll-home-body data-aos="fade-up">
+    <svg class="scroll-up__icon" width="25" height="25">
+      <use href="images/01-header/icons.svg#scroll-up"></use>
+    </svg>
   </button>
 </footer>
