--- a/src/partials/01-header.html
+++ b/src/partials/01-header.html
@@ -11,42 +11,32 @@
         <li class="header__item">
           <button
             class="header__link header__link--current btn"
-            data-scroll-home>
+            data-scroll-home
+          >
             Home
-        </button>
-        </li>
-
-        <li class="header__item">
-          <button 
-            class="header__link btn"
-            type="button"
-            data-scroll-reviews-menu>
-            About us
-        </button>
-        </li>
-
-        <li class="header__item">
-          <button
-           class="header__link btn"
-           data-scroll-about-menu>
-           How it’s made?
           </button>
         </li>
 
         <li class="header__item">
-          <button
-          class="header__link btn"
-          data-scroll-products>
-          Our products
-        </button>
+          <button class="header__link btn" type="button" data-scroll-reviews>
+            About us
+          </button>
         </li>
 
         <li class="header__item">
-          <button 
-            class="header__link btn"
-            data-scroll-contacts>
-            Contact
-        </button>
+          <button class="header__link btn" data-scroll-about>
+            How it’s made?
+          </button>
+        </li>
+
+        <li class="header__item">
+          <button class="header__link btn" data-scroll-products>
+            Our products
+          </button>
+        </li>
+
+        <li class="header__item">
+          <button class="header__link btn" data-scroll-contacts>Contact</button>
         </li>
       </ul>
     </nav>
@@ -87,17 +77,9 @@
         <button
           class="mob-menu__link mob-menu__link--current btn"
           type="button"
-          data-scroll-home-menu>
-        Home
-      </button>
-      </li>
-
-      <li class="mob-menu__item">
-        <button
-          class="mob-menu__link btn"
-          type="button"
-          data-scroll-reviews-menu>
-          About us
+          data-scroll-home-menu
+        >
+          Home
         </button>
       </li>
 
@@ -105,27 +87,36 @@
         <button
           class="mob-menu__link btn"
           type="button"
-          data-scroll-about-menu>
+          data-scroll-reviews-menu
+        >
+          About us
+        </button>
+      </li>
+
+      <li class="mob-menu__item">
+        <button class="mob-menu__link btn" type="button" data-scroll-about-menu>
           How it’s made?
-          </button>
+        </button>
       </li>
 
       <li class="mob-menu__item">
         <button
           class="mob-menu__link btn"
           type="button"
-          data-scroll-products-menu>
+          data-scroll-products-menu
+        >
           Our products
         </button>
       </li>
 
       <li class="mob-menu__item">
         <button
-        class="mob-menu__link btn"
-        type="button"
-        data-scroll-contacts-menu>
-        Contact
-      </button>
+          class="mob-menu__link btn"
+          type="button"
+          data-scroll-contacts-menu
+        >
+          Contact
+        </button>
       </li>
     </ul>
   </div>
