--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -83,10 +83,7 @@
 
     <ul class="hero__list">
       <li class="hero__item">
-        <button 
-          class="hero__link btn"
-          type="button"g
-          data-scroll-products-hero>
+        <button class="hero__link btn" type="button" data-scroll-products-hero>
           Products
         </button>
       </li>
@@ -95,7 +92,8 @@
         <button
           class="hero__link hero--link--secondary btn"
           type="button"
-          data-scroll-about-hero>
+          data-scroll-about-hero
+        >
           How its made?
         </button>
       </li>
