scroll button adaptive size

--- a/src/partials/09-footer.html
+++ b/src/partials/09-footer.html
@@ -54,8 +54,13 @@
     </p>
   </div>
 
-  <button class="scroll-up" type="button" data-scroll-home-body data-aos="fade-up">
-    <svg class="scroll-up__icon" width="25" height="25">
+  <button
+    class="scroll-up"
+    type="button"
+    data-scroll-home-body
+    data-aos="fade-up"
+  >
+    <svg class="scroll-up__icon" width="20" height="20">
       <use href="images/01-header/icons.svg#scroll-up"></use>
     </svg>
   </button>
