--- a/src/sass/components/_09-footer.scss
+++ b/src/sass/components/_09-footer.scss
@@ -221,23 +221,41 @@
 
 .scroll-up{
   position: fixed;
-  bottom:50px;
-  right:50px;
+  bottom:7px;
+  right:7px;
   border: 0;
   background-color: transparent;
   z-index: 4;
+  @include mq(tab) {
+    bottom: 15px;
+    right: 15px;
+  }
+  @include mq(desc) {
+      bottom: 50px;
+        right: 50px;
+  }
 
 }
 
 .scroll-up__icon {
   fill: #ffffff;
   background-color: var(--iconColor);
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   border-radius: 10px;
+  @include mq (tab) {
+      width: 35px;
+      height: 35px;
+  }
+    @include mq (desc) {
+        height: 50px;
+        width: 50px;
+      }
 
   transition: background-color 250ms ease-in-out,
   fill 250ms ease-in-out;
+
+
 
   cursor: pointer;
   &:hover,
