--- a/src/sass/components/_07-customers.scss
+++ b/src/sass/components/_07-customers.scss
@@ -1,12 +1,12 @@
 .review-section{
-    padding-bottom: 60px;
+    padding-top: 60px;
 
     @include mq(tab){
-        padding-bottom: 80px;
+        padding-top: 80px;
     }
 
     @include mq(desc){
-        padding-bottom: 120px;
+        padding-top: 120px;
     }
 
     & .review-title{
