--- a/src/sass/components/_08-contacts.scss
+++ b/src/sass/components/_08-contacts.scss
@@ -1,4 +1,5 @@
 .location {
+  padding-top: 60px;
   background: linear-gradient(
     180deg,
     rgba(255, 255, 255, 1) 21.5%,
@@ -10,6 +11,7 @@
       rgba(255, 255, 255, 1) 45.5%,
       rgba(255, 245, 246, 1) 45.5%
     );
+    padding-top: 80px;
   }
   @include mq(desc) {
     background: linear-gradient(
@@ -17,6 +19,7 @@
       rgba(255, 255, 255, 1) 13%,
       rgba(255, 245, 246, 1) 13%
     );
+    padding-top: 120px;
   }
 }
 
